syntax = "proto3";
package protobuf;
option go_package = "";
import "cpuInfo.proto";
import "memInfo.proto";
import "diskInfo.proto";
message SystemInfo{
  protobuf.CPUInfo CPUInfo = 6;
  protobuf.MEMInfo MEMInfo = 7;
  protobuf.DiskInfo DiskInfo = 8;
}

